package io.github.adventures_in_the_jungle;

public class Main {
    public static void main(String[] args) {
        System.out.println("Hello world!");
    }
}