package io.github.adventures_in_the_jungle.logic.game;

public class Animal implements Intractable {


}
